crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/valid/different_symbol.js
export const myFunc = () => {};
export default function () {}