crates/biome_js_analyze/tests/specs/nursery/noRedundantDefaultExport/invalid/function_declaration.js
export function foo() {}
export default foo;